# haze.network

./: .dockerignore  .gitignore  .impeccable.md  Cargo.toml  Dockerfile  LICENSE  README.md  render.yaml
.claude/: launch.json
.github/workflows/: ci.yml  ios.yml  release.yml
agent-sdk/: README.md  package-lock.json  package.json  tsconfig.json
agent-sdk-web/: index.html
agent-sdk/examples/: claim-name-test.ts  marketplace-adversarial-test.ts  two-agents.ts
agent-sdk/src/: agent.ts  index.ts  node-api.ts
agent-sdk/wasm/: haze_core.d.ts  haze_core.js  haze_core_bg.wasm  package.json
android/: .gitattributes  .gitignore  gradlew  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/haze/wallet/: BiometricLock.kt  MainActivity.kt  NodeApi.kt  SecureStorage.kt  WalletRepository.kt
android/app/src/main/java/com/haze/wallet/ui/theme/: GlassBottomBar.kt  HazeComponents.kt  HazeTheme.kt
android/app/src/main/res/values/: themes.xml
api/: Cargo.toml
api/src/: allowlist.rs  assets.rs  collections.rs  explorer.rs  faucet.rs  inbox.rs  lib.rs  marketplace.rs  names.rs  ratelimit.rs  server.rs
core/: Cargo.toml
core/src/: allowlist.rs  assets.rs  block.rs  chain.rs  collections.rs  compaction.rs  genesis.rs  integration_tests.rs  lib.rs  marketplace.rs  mempool.rs  proposer.rs  registry.rs  storage.rs  sync.rs  transaction.rs  vesting.rs
crypto/: Cargo.toml
crypto/src/: lib.rs  note.rs  pedersen.rs  schnorr.rs
deploy/: README.md  config.env.example  haze-node.service  setup.sh
deploy/nginx/: node.conf.tmpl  static-site.conf.tmpl
haze-explorer-web/: index.html
haze-homepage-web/: index.html
haze-homepage-web/assets/: index-CJVhCLCb.css  index-CkvpOoTv.js
haze-wallet-web/: index.html
haze-wallet-web/pkg/: haze_core.d.ts  haze_core.js  haze_core_bg.wasm  haze_core_bg.wasm.d.ts
haze-website/: index.html  package-lock.json  package.json
haze-website/src/: App.css  App.tsx  index.css
ios/: README.md
ios/HazeWalletApp/: ContentView.swift  HazeTheme.swift  HazeWalletApp.swift  HistoryView.swift  MoreView.swift  NamesView.swift  OnboardingView.swift  ReceiveView.swift  SendView.swift  WalletHomeView.swift
ios/HazeWalletCore/: Package.swift
ios/HazeWalletCore/Sources/HazeWalletCore/: NodeApi.swift  SecureStorage.swift  WalletRepository.swift
nft-marketplace/: index.html
nft-marketplace/pkg/: README.md  haze_core.d.ts  haze_core.js  haze_core_bg.wasm  haze_core_bg.wasm.d.ts  package.json
p2p/: Cargo.toml
p2p/src/: dandelion.rs  integration_tests.rs  lib.rs  message.rs  server.rs
p2p/tests/: deserialize_fuzz.rs
release/: README.txt.tmpl
scripts/: check-ffi-wasm-parity.sh
src/: ffi.rs  lib.rs  main.rs  wasm.rs
src/api/: allowlist.rs  assets.rs  collections.rs  explorer.rs  faucet.rs  inbox.rs  marketplace.rs  mod.rs  names.rs  server.rs
src/core/: allowlist.rs  assets.rs  block.rs  chain.rs  collections.rs  compaction.rs  cut_through.rs  genesis.rs  integration_tests.rs  marketplace.rs  mempool.rs  merkle.rs  miner.rs  mod.rs  proposer.rs  registry.rs  storage.rs  transaction.rs  vesting.rs
src/crypto/: mod.rs  pedersen.rs  range_proof.rs  schnorr.rs
src/p2p/: dandelion.rs  message.rs  mod.rs  server.rs  transport.rs
src/wallet/: cli.rs  keystore.rs  mod.rs  note.rs  planner.rs  recovery.rs  slate.rs  store.rs
wallet/: Cargo.toml
wallet/src/: cli.rs  keystore.rs  lib.rs  planner.rs  recovery.rs  slate.rs  store.rs
