[package]
name = "haze"
version = "0.1.0"
edition = "2024"

[lib]
name = "haze_core"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "haze"
path = "src/main.rs"
required-features = ["native"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["native"]

[features]
default = ["native"]
# Everything that needs a real OS: sockets (p2p, the API server), a filesystem
# (sled storage), a native TLS stack (reqwest), and UniFFI's mobile scaffolding.
# None of this compiles to wasm32-unknown-unknown.
native = ["dep:sled", "dep:warp", "dep:reqwest", "dep:clap", "dep:uniffi", "dep:tokio"]
wasm = ["dep:wasm-bindgen"]

[dependencies]
curve25519-dalek-ng = { version = "4.1.1", features = ["serde"] }
bulletproofs = "4.0.0"
rand = "0.8"
merlin = "3.0.0"
sha2 = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0.150"
thiserror = "1.0"

tokio = { version = "1.52.3", features = ["full"], optional = true }
clap = { version = "4.6.1", features = ["derive"], optional = true }
warp = { version = "0.4.3", features = ["server"], optional = true }
reqwest = { version = "0.13.4", features = ["json"], optional = true }
sled = { version = "0.34", optional = true }
uniffi = { version = "0.28", features = ["cli"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }

# rand/OsRng (keystore generation, nonces, range proofs) depends on getrandom,
# which does nothing on wasm32-unknown-unknown unless its "js" feature is
# enabled - without this every RNG call panics at runtime in the browser.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
