[workspace]
resolver = "2"
members = ["crypto", "core", "wallet", "p2p", "api"]

[package]
name = "haze"
version = "0.1.0"
edition = "2024"

[lib]
# Kept as haze_core (not renamed to match the haze-chain workspace member)
# because Android's build expects exactly this name - libhaze_core.so and
# the generated Kotlin bindings under uniffi/haze_core/ are both derived
# from it. This is the mobile-facing FFI surface (src/ffi.rs) plus the
# wasm surface (src/wasm.rs), not the consensus logic itself anymore.
name = "haze_core"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "haze"
path = "src/main.rs"
required-features = ["native"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["native"]

[[bin]]
name = "genesis-keygen"
path = "src/bin/genesis_keygen.rs"

[features]
default = ["native"]
# Everything that needs a real OS: sockets (p2p, the API server), a filesystem
# (sled storage), a native TLS stack (reqwest), and UniFFI's mobile scaffolding.
# None of this compiles to wasm32-unknown-unknown.
native = ["dep:clap", "dep:uniffi", "dep:tokio", "dep:haze-p2p", "dep:haze-api", "haze-chain/native", "haze-wallet/native"]
wasm = ["dep:wasm-bindgen"]

[dependencies]
haze-chain = { path = "core" }
haze-crypto = { path = "crypto" }
haze-wallet = { path = "wallet" }
haze-p2p = { path = "p2p", optional = true }
haze-api = { path = "api", optional = true }

curve25519-dalek-ng = { version = "4.1.1", features = ["serde"] }
bulletproofs = "4.0.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0.150"
thiserror = "1.0"

tokio = { version = "1.52.3", features = ["full"], optional = true }
clap = { version = "4.6.1", features = ["derive"], optional = true }
uniffi = { version = "0.28", features = ["cli"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
getrandom04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }
