[package]
name = "haze-api"
version = "0.1.0"
edition = "2024"

[lib]
name = "haze_api"
path = "src/lib.rs"

[dependencies]
haze-chain = { path = "../core", features = ["native"] }
haze-crypto = { path = "../crypto" }
haze-p2p = { path = "../p2p" }
haze-wallet = { path = "../wallet", features = ["native"] }

curve25519-dalek-ng = { version = "4.1.1", features = ["serde"] }
sha2 = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
warp = { version = "0.4.3", features = ["server", "websocket"] }
tokio = { version = "1.52.3", features = ["full"] }
