[package]
# Named haze-chain, not haze-core: the root package's own cdylib/staticlib
# is already named haze_core, and Android's build expects that exact name
# (libhaze_core.so, generated Kotlin bindings under uniffi/haze_core/) -
# giving this crate the same name would collide with it.
name = "haze-chain"
version = "0.1.0"
edition = "2024"

[lib]
name = "haze_chain"
path = "src/lib.rs"

[features]
default = []
# Storage (sled) and the background proposer loop (tokio) both need a real
# OS - neither compiles to wasm32-unknown-unknown. Mirrors the native/wasm
# split every other Haze crate uses.
native = ["dep:sled", "dep:tokio"]

[dependencies]
haze-crypto = { path = "../crypto" }

curve25519-dalek-ng = { version = "4.1.1", features = ["serde"] }
bulletproofs = "4.0.0"
rand = "0.8"
sha2 = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"

sled = { version = "0.34", optional = true }
tokio = { version = "1.52.3", features = ["full"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
tokio = { version = "1.52.3", features = ["full", "test-util"] }
