[package]
name = "haze-crypto"
version = "0.1.0"
edition = "2024"

[lib]
name = "haze_crypto"
path = "src/lib.rs"

[dependencies]
curve25519-dalek-ng = { version = "4.1.1", features = ["serde"] }
bulletproofs = "4.0.0"
rand = "0.8"
merlin = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.8"
chacha20poly1305 = "0.11.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
getrandom04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }
