[package]
name = "haze-p2p"
version = "0.1.0"
edition = "2024"

[lib]
name = "haze_p2p"
path = "src/lib.rs"

[dependencies]
haze-chain = { path = "../core", features = ["native"] }
haze-crypto = { path = "../crypto" }

curve25519-dalek-ng = { version = "4.1.1", features = ["serde"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
sha2 = "0.10.8"
tokio = { version = "1.52.3", features = ["full"] }
warp = { version = "0.4.3", features = ["server", "websocket"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
