[package]
name = "haze-wallet"
version = "0.1.0"
edition = "2024"

[lib]
name = "haze_wallet"
path = "src/lib.rs"

[features]
default = []
native = ["dep:clap", "dep:reqwest", "dep:serde_json"]

[dependencies]
haze-chain = { path = "../core" }
haze-crypto = { path = "../crypto" }

curve25519-dalek-ng = { version = "4.1.1", features = ["serde"] }
rand = "0.8"
sha2 = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
bip39 = "2.2.2"

clap = { version = "4.6.1", features = ["derive"], optional = true }
reqwest = { version = "0.13.4", features = ["json"], optional = true }
serde_json = { version = "1.0.150", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
getrandom04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }
